tests/paczka1/fuzzy1/88397636.err
Error in line 13: F4vO S116 207,74
Error in line 7: QYNv S72 23,7
Error in line 17: QYNv S752 -1,0
Error in line 21: CGg S116 15,2
Error in line 14: QYNv S752 16,9
Error in line 22: CGg S752 44,5
Error in line 25: QYNv S72 29,4
Error in line 35: CGg S116 37,3
